--- a/BOLT Data GUI/BOLT Data GUI.vcxproj
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj
@@ -143,13 +143,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="BOLT Data GUI.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="eHandler.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BOLT Data GUI.cpp" />
+    <ClCompile Include="eHandler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
