--- a/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
@@ -24,12 +24,15 @@
     <ClInclude Include="Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="BOLT Data GUI.h">
+    <ClInclude Include="eHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="BOLT Data GUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="eHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
