Panels, Buttons, Events Update

--- a/BOLT Data GUI/BOLT Data GUI.vcxproj
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj
@@ -149,7 +149,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BOLT Data GUI.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="eHandler.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
