--- a/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
@@ -29,10 +29,10 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="BOLT Data GUI.cpp">
+    <ClCompile Include="eHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="eHandler.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
