Multiple Frames Progress..

--- a/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
@@ -27,12 +27,24 @@
     <ClInclude Include="eHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SystemAnalysis.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Default.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="eHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SystemAnalysis.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Default.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
