--- a/BOLT Data GUI/BOLT Data GUI.vcxproj
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj
@@ -145,12 +145,16 @@
   <ItemGroup>
     <ClInclude Include="framework.h" />
     <ClInclude Include="eHandler.h" />
+    <ClInclude Include="Default.h" />
+    <ClInclude Include="SystemAnalysis.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="eHandler.cpp" />
+    <ClCompile Include="Default.cpp" />
+    <ClCompile Include="SystemAnalysis.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
