Port Communication Good

--- a/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClInclude Include="eHandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="portCommuniction.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="eHandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="portCommunication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
