--- a/BOLT Data GUI/BOLT Data GUI.vcxproj
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj
@@ -116,7 +116,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WXUSINGDLL;wxMSVC_VERSION_AUTO;_CRT_SECURE_NO_WARNINGS;wxMSVC_VERSION_ABI_COMPAT;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(wxwin)/3.1.4/include/msvc;$(wxwin)/3.1.4/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(wxwin)/3.1.4/include/msvc;$(wxwin)/3.1.4/include;C:\Users\14robin\source\repos\asio_Lib\asio-1.18.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -132,7 +132,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WXUSINGDLL;wxMSVC_VERSION_AUTO;_CRT_SECURE_NO_WARNINGS;wxMSVC_VERSION_ABI_COMPAT;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(wxwin)/3.1.4/include/msvc;$(wxwin)/3.1.4/include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(wxwin)/3.1.4/include/msvc;$(wxwin)/3.1.4/include;C:\Users\14robin\source\repos\asio_Lib\asio-1.18.0\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -143,6 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\asio_Lib\asio-1.18.0\include\asio.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="eHandler.h" />
     <ClInclude Include="portCommuniction.h" />
