--- a/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="..\..\asio_Lib\asio-1.18.0\include\asio.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\Desktop\20_Fall\ECE 4974 - Independant Study\wxMathPlot-0.1.2\mathplot.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="eHandler.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="portCommunication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\Desktop\20_Fall\ECE 4974 - Independant Study\wxMathPlot-0.1.2\mathplot.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
