--- a/BOLT Data GUI/BOLT Data GUI.vcxproj
+++ b/BOLT Data GUI/BOLT Data GUI.vcxproj
@@ -143,19 +143,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\Desktop\20_Fall\ECE 4974 - Independant Study\wxMathPlot-0.1.2\mathplot.h" />
     <ClInclude Include="..\..\asio_Lib\asio-1.18.0\include\asio.hpp" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="eHandler.h" />
-    <ClInclude Include="portCommuniction.h" />
+    <ClInclude Include="mathplot.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\Desktop\20_Fall\ECE 4974 - Independant Study\wxMathPlot-0.1.2\mathplot.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="eHandler.cpp" />
-    <ClCompile Include="portCommunication.cpp" />
+    <ClCompile Include="mathplot.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
